Bug 735237 - Disable window.showModalDialog in Fennec [r=jst]